[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/level_1.png" type="Texture" id=1]
[ext_resource path="res://levels/level_1/level_1.gd" type="Script" id=2]
[ext_resource path="res://images/background.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 70, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 70, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 70, 30 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="tombol" type="Node2D" parent="."]

[node name="13" type="TouchScreenButton" parent="tombol"]
position = Vector2( 22, 293 )
shape = SubResource( 1 )

[node name="16" type="TouchScreenButton" parent="tombol"]
position = Vector2( 21, 376 )
shape = SubResource( 2 )

[node name="18" type="TouchScreenButton" parent="tombol"]
position = Vector2( 199, 291 )
shape = SubResource( 3 )

[node name="11" type="TouchScreenButton" parent="tombol"]
position = Vector2( 198, 376 )
shape = SubResource( 4 )

[connection signal="pressed" from="tombol/13" to="." method="_on_13_pressed"]
[connection signal="pressed" from="tombol/16" to="." method="_on_16_pressed"]
[connection signal="pressed" from="tombol/18" to="." method="_on_18_pressed"]
[connection signal="pressed" from="tombol/11" to="." method="_on_11_pressed"]
